# PolynomialsPractical

./: App.cpp  App.h  Button.cpp  Button.h  CMakeLists.txt  Database.cpp  Database.h  EventHandler.cpp  EventHandler.h  FSM.cpp  FSM.h  Locale.h  Polinom.cpp  Polinom.h  README.md  RoundedRectangle.cpp  RoundedRectangle.h  Screen.h  Singleton.h  Table.cpp  Table.h  TextBox.cpp  TextBox.h  TwoLinkedList.h  list.h  main.cpp
